# cmake-starter

./: CMakeLists.txt  README.md  cmakestarter.cpp  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
